update shell scripts